test/tests/stages/9_functions/invalid_types/assign_value_to_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  (
  void
  )
  ;
  identifier(x)
  =
  const int(3)
  ;
  return
  const int(0)
  ;
  }
